--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,12 @@
-blinker==1.6.2
-Boruta==0.3
-certifi==2023.7.22
-charset-normalizer==3.3.0
-click==8.1.7
-contourpy==1.1.1
-cycler==0.12.0
-et-xmlfile==1.1.0
 Flask==3.0.0
-fonttools==4.43.0
-idna==3.4
 inflection==0.5.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.5
-MarkupSafe==2.1.3
 matplotlib==3.8.0
-mkl-service==2.3.0
-openpyxl==3.0.10
 Pillow==10.0.1
-pyparsing==3.1.1
-pywin32==305.1
 requests==2.31.0
 scipy==1.11.1
 seaborn==0.13.0
 tabulate==0.9.0
-urllib3==2.0.6
-Werkzeug==3.0.0
 xgboost==2.0.0
+numpy==1.22.4
+pandas==1.5.0
+scikit-learn==1.1.1
